Further colour contrast issues

--- a/src/components/jobs-listing-block/jobs-block.module.scss
+++ b/src/components/jobs-listing-block/jobs-block.module.scss
@@ -96,7 +96,7 @@
         &Location {
             margin: 0 0 2px;
             line-height: 1.4;
-            color: $accent;
+            color: $accent-small-text;
             text-transform: uppercase;
             letter-spacing: 0.15em;
             font-weight: bold;
